// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`write merging merges correctly 1`] = `
Array [
  Object {
    "content": "- key: home
  title: ホーム
- key: about
  title: 約
- key: news
  title: ニュース
- key: special
  title: Don't delete me
",
    "fileName": "test/data/merge-test/menu.ja.yaml",
  },
  Object {
    "content": "intro: このサブフォルダへようこそ
description: これは翻訳されない説明です
items:
  - key: test
    title: テスト中
  - key: hello
    title: ハローワーク
",
    "fileName": "test/data/merge-test/sub/welcome.ja.yaml",
  },
  Object {
    "content": "title: 題名
description: これは説明です
new: 新しいキー
body: |
  ##これはいくつかの値下げです

  これはどのように？
",
    "fileName": "test/data/merge-test/ui.global.ja.yaml",
  },
]
`;

exports[`write writes freshly correctly 1`] = `
Array [
  Object {
    "content": "- key: home
  title: ホーム
- key: about
  title: 約
- key: news
  title: ニュース
",
    "fileName": "test/data/out-temp/menu.ja.yaml",
  },
  Object {
    "content": "intro: このサブフォルダへようこそ
description: これは翻訳されない説明です
items:
  - key: test
    title: テスト中
  - key: hello
    title: ハローワーク
",
    "fileName": "test/data/out-temp/sub/welcome.ja.yaml",
  },
  Object {
    "content": "title: 題名
description: これは説明です
new: 新しいキー
body: |
  ##これはいくつかの値下げです

  これはどのように？
",
    "fileName": "test/data/out-temp/ui.global.ja.yaml",
  },
]
`;
